# simple-budget

./: Makefile  README.md  docker-compose.yml
api/: README.md  main.py
api/db_models/: expenses.py  savings.py  users.py
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/api/: README.md  api_main.py  constants.py  models.py
backend/db/: constants.py  crud.py  db_main.py  main.py  models.py  simpleDB.py
backend/db/models/: income.py  recreational.py
backend/models/: __init__.py  base.py
backend/simple_budget/: api_models.py  constants.py  crud.py  database.py  db_models.py  main.py
db/: README.md
frontend/: README.md
simple-budget-ui/: Dockerfile  README.md
ui/: package-lock.json  package.json
